@@ -145,6 +145,11 @@ bool WebNode::isTextNode() const
     return m_private->isTextNode();
 }
 
+bool WebNode::isFocusable() const
+{
+    return m_private->isFocusable();
+}
+
 bool WebNode::isContentEditable() const
 {
     return m_private->isContentEditable();
